--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=test
+DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
